Added a basic introduction of text with functions to display the intro, pause text between outputs, wait for the user to input something, and a way to wrap the text so it does not cut itself off on one line and continue on the next. Stored this in the Backstory.h header and imported and ran in the main.

--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="ATeam-FantasyGame.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Backstory.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
