--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj.filters
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Backstory.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
