--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ATeam-FantasyGame.cpp" />
+    <ClCompile Include="Backstory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Backstory.h" />
