--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="NPC.cpp" />
     <ClCompile Include="UI.cpp" />
     <ClCompile Include="Backstory.cpp" />
     <ClCompile Include="dialogue.cpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="GameWorld.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Location.h" />
+    <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="UI.h" />
     <ClInclude Include="worldObjects.h" />
