--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="NPC.cpp" />
+    <ClCompile Include="redCapDialogue.cpp" />
     <ClCompile Include="UI.cpp" />
     <ClCompile Include="Backstory.cpp" />
     <ClCompile Include="dialogue.cpp" />
@@ -144,6 +145,7 @@
     <ClInclude Include="Location.h" />
     <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="redCapDialogue.h" />
     <ClInclude Include="UI.h" />
     <ClInclude Include="worldObjects.h" />
     <ClInclude Include="dialogue.h" />
