--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj.filters
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="NPC.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="redCapDialogue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Backstory.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DialogueNPC.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="redCapDialogue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
