ATEAM-46 Added a gameWorld.cpp file and rewrote how the world is intalized, created DialogueNPC to be overritted by different dialogue classes to allow for flexibilty later on. Created the ability to talk to the Redcap and kill it if the user is holding the cross. Rewrote the lookAround function to display NPC's with new way of having their location. Fileld out redcap and dungeon's descriptions.

--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj.filters
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="redCapDialogue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameWorld.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DialogueNPC.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Backstory.h">
