--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -137,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Backstory.h" />
+    <ClInclude Include="better-dialogue.h" />
     <ClInclude Include="GameWorld.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Location.h" />
