ATEAM-45 Created the .h file for the improved dialogue tree with all the class headers, etc. that I will need. There are a few classes in here, but they are so small that I do not want to take up space by creating extra .h files.

--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj.filters
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj.filters
@@ -83,5 +83,11 @@
     <ClInclude Include="redCapDialogue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameWorld.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="better-dialogue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
