--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -141,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Backstory.h" />
+    <ClInclude Include="better-dialogue.h" />
     <ClInclude Include="DialogueNPC.h" />
     <ClInclude Include="GameWorld.h" />
     <ClInclude Include="Item.h" />
