--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="ATeam-FantasyGame.cpp" />
     <ClCompile Include="DialogueNPC.cpp" />
     <ClCompile Include="GameWorld.cpp" />
+    <ClCompile Include="better-dialogue.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Player.cpp" />
