Connected conversation nodes to the appropriate responses. Added a rough option for consequences ("You were rude/You were polite"). Next steps are to flesh out the consequences and add the riddles/restart option, if applicable.

--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="DialogueNPC.cpp" />
     <ClCompile Include="GameWorld.cpp" />
     <ClCompile Include="better-dialogue.cpp" />
+    <ClCompile Include="consequences.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Player.cpp" />
