--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="ATeam-FantasyGame.cpp" />
     <ClCompile Include="better-dialogue.cpp" />
+    <ClCompile Include="consequences.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Player.cpp" />
