assigned the new dialgoue tree of the fairies to an npc and added a banquet hall location connected to the npc's

--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="ATeam-FantasyGame.cpp" />
     <ClCompile Include="DialogueNPC.cpp" />
+    <ClCompile Include="fairyDialogue.cpp" />
     <ClCompile Include="GameWorld.cpp" />
     <ClCompile Include="better-dialogue.cpp" />
     <ClCompile Include="consequences.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="Backstory.h" />
     <ClInclude Include="better-dialogue.h" />
     <ClInclude Include="DialogueNPC.h" />
+    <ClInclude Include="fairyDialogue.h" />
     <ClInclude Include="GameWorld.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Location.h" />
