ATEAM-72 Implemented the ArmoryChest class to take care of all interactions the chest in the armory would handle. Implemented changes to the lookAround and interact functions of the UI to handle objects. Added getObjectsInLocation function to gameWorld that is identical to the getNPCsinLocation. Added a sword and a helmet items, and pointed them to the chest and implemented interactions with the chest. Added Armory Location, and pointed the chest to that location.

--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ArmoryChest.cpp" />
     <ClCompile Include="ATeam-FantasyGame.cpp" />
     <ClCompile Include="DialogueNPC.cpp" />
     <ClCompile Include="fairyDialogue.cpp" />
