ATEAM-72 fixed issue throwing a nullpointer if the player does not have anything equipped to their hands

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/enc_temp_folder/dd8cb868b1ae6da5d9ff26bdaaeed7/ArmoryChest.cpp
