created hareDialogue .h and .cpp files

--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="GameWorld.cpp" />
     <ClCompile Include="better-dialogue.cpp" />
     <ClCompile Include="consequences.cpp" />
+    <ClCompile Include="hareDialogue.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Objects.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="DialogueNPC.h" />
     <ClInclude Include="fairyDialogue.h" />
     <ClInclude Include="GameWorld.h" />
+    <ClInclude Include="hareDialogue.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Location.h" />
     <ClInclude Include="NPC.h" />
