added new location, dialogue, new header and .cpp files,

--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="redCapDialogue.cpp" />
+    <ClCompile Include="trollDialogue.cpp" />
     <ClCompile Include="TrenchendDialogue.cpp" />
     <ClCompile Include="UI.cpp" />
     <ClCompile Include="Backstory.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="Objects.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="redCapDialogue.h" />
+    <ClInclude Include="trollDialogue.h" />
     <ClInclude Include="TrechendDialogue.h" />
     <ClInclude Include="UI.h" />
     <ClInclude Include="worldObjects.h" />
