--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="fairyDialogue.cpp" />
     <ClCompile Include="GameWorld.cpp" />
     <ClCompile Include="better-dialogue.cpp" />
+    <ClCompile Include="goddessDialogue.cpp" />
     <ClCompile Include="hareDialogue.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Location.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="DialogueNPC.h" />
     <ClInclude Include="fairyDialogue.h" />
     <ClInclude Include="GameWorld.h" />
+    <ClInclude Include="GoddessDialogue.h" />
     <ClInclude Include="hareDialogue.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Location.h" />
