--- a/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
+++ b/ATeam-FantasyGame/ATeam-FantasyGame.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="goddessDialogue.cpp" />
     <ClCompile Include="hareDialogue.cpp" />
     <ClCompile Include="Item.cpp" />
+    <ClCompile Include="Kelpie.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="marbleBust.cpp" />
     <ClCompile Include="Objects.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="GoddessDialogue.h" />
     <ClInclude Include="hareDialogue.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="Kelpie.h" />
     <ClInclude Include="Location.h" />
     <ClInclude Include="marbleBust.h" />
     <ClInclude Include="NPC.h" />
